<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_A">Team A</string>
    <string name="zero">0</string>
    <string name="point_3">+3 Points</string>
    <string name="point_2">+2 Points</string>
    <string name="point_1">Free Throw</string>
    <string name="action_settings">Setting</string>
    <string name="Reset">Reset</string>
    <string name="team_B">Team B</string>
    <string name="zero_">0</string>
    <string name="point_3_">+3 Points</string>
    <string name="point_2_">+2 Points</string>
    <string name="point_1_">Free Throw</string>
</resources>
